# em-auth-backend

./: .gitignore  README.md  pyproject.toml
auth_backend/: settings.py  urls.py  views.py
auth_backend/management/commands/: clear_test_data.py  create_test_data.py
jwt_auth/: __init__.py  backends.py  managers.py  middleware.py  models.py  responses.py  serializers.py  spectacular.py  token_data.py  urls.py  utils.py  views.py
jwt_auth/migrations/: 0001_initial.py  0002_remove_refreshtoken_token_refreshtoken_jti.py  0003_alter_refreshtoken_jti.py  0004_blacklistedtoken.py
mock_objects/: apps.py  objects.py  serializers.py  urls.py  views.py
permissions/: classes.py  managers.py  models.py  serializers.py  urls.py  views.py
permissions/migrations/: 0001_initial.py
users/: admin.py  managers.py  serializers.py  urls.py  views.py
users/auth/: auth_backend.py
users/migrations/: 0001_initial.py  0002_user_groups_user_is_superuser_user_user_permissions.py  0003_role_is_admin_role_only_one_admin_role.py
users/models/: __init__.py  refresh_token.py  roles.py  users.py
