[project]
name = "em-auth-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Nikita Shibaev",email = "nshib.54321@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.8,<6.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "drf-spectacular (>=0.29.0,<0.30.0)",
    "pyjwt (>=2.10.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
